--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -66,7 +66,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         name: Checkout repo
-      - uses: git-for-windows/setup-git-for-windows-sdk@master
+      - uses: git-for-windows/setup-git-for-windows-sdk@main
         name: Download envorinment
         with:
           flavor: minimal
