--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -65,7 +65,7 @@ jobs:
     steps:
       - uses: msys2/setup-msys2@v2
         name: Setup MSYS2 [i686]
-        if: matrix.arch == "32"
+        if: matrix.arch == '32'
         with:
           MSYSTEM: MINGW${{ matrix.arch }}
           path-type: strict
@@ -77,7 +77,7 @@ jobs:
             mingw-w64-i686-toolchain
       - uses: msys2/setup-msys2@v2
         name: Setup MSYS2 [x86_64]
-        if: matrix.arch == "64"
+        if: matrix.arch == '64'
         with:
           MSYSTEM: MINGW${{ matrix.arch }}
           path-type: strict
